<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Race results</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="age">Age</string>
    <string name="ranking">Ranking</string>
    <string name="loading_data_format">Format of the data loading:</string>
    <string name="json_format">JSON</string>
    <string name="xml_format">XML</string>
    <string name="txt_format">TXT</string>
    <string name="error_loading_results">Error occurred while loading results from server</string>
    <string name="error_parsing_results">Error occurred while parsing results</string>
</resources>
